add subscribe to SpriteBatchDrawStringEvent

--- a/TranslationMod/Config.json
+++ b/TranslationMod/Config.json
@@ -1,1 +1,1 @@
-{"LanguagePath":"C:\\Users\\WarFollowsMe\\AppData\\Roaming\\StardewValley\\Mods\\TranslationMod\\languages\\RU.json","LanguageName":"RU"}
+{"LanguagePath":"languages\\RU.json","LanguageName":"RU"}
